# forum

./: .gitignore  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2025_10_28_1939-bb2a63bc4fdf_create_posts_table_and_users_table.py  2025_10_28_2231-0e2062121506_create_posts_table_and_users_table.py  2025_11_05_1741-7c48d03a86ad_add_password_column_to_users_table.py
api_v1/: __init__.py
api_v1/posts/: crud.py  schemas.py  views.py
auth/: utils.py
core/: config.py
core/models/: __init__.py  base.py  crud.py  db_helper.py  mixins.py  post.py  user.py  user_schemas.py
