[project]
name = "forum"
version = "0.1.0"
description = ""
authors = [
    {name = "danzel",email = "savostyanov19d@mail.ru"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.120.4,<0.121.0)",
    "alembic[standart] (>=1.17.1,<2.0.0)",
    "uvicorn[standart] (>=0.38.0,<0.39.0)",
    "sqlalchemy[standart] (>=2.0.44,<3.0.0)"
]

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
